syntax = "proto3";

package mailer;
option go_package = "github.com/dehwyy/mafuyu/libs/grpc/gen/api";

import "google/protobuf/empty.proto";

service MailerRpc {
  rpc SendConfirmationEmail (SendConfirmationEmailRequest) returns (google.protobuf.Empty);
}

message SendConfirmationEmailRequest {
  string to = 1;
  string subject = 2;
  string code = 3;
}
